# ChangeLog for net-dialup/ltmodem
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ltmodem/ChangeLog,v 1.32 2007/03/10 14:14:48 mrness Exp $

  10 Mar 2007; Alin Năstac <mrness@gentoo.org>
  ltmodem-8.31_alpha10-r3.ebuild:
  Remove references to $ROOT from src_install (#168039).

  25 Feb 2007; <genstef@gentoo.org> ltmodem-8.31_alpha10-r3.ebuild:
  use KV_DIR only after linux-mod_pkg_setup, bug 168051

  20 Dec 2006; Alin Năstac <mrness@gentoo.org>
  files/ltmodem-2.6-alk-8-kernel-changes.patch:
  Make kernel patch future-proof (bug #156783 comment #11).

  03 Dec 2006; Alin Năstac <mrness@gentoo.org>
  files/ltmodem-2.6-alk-8-kernel-changes.patch:
  Fix broken compilation against kernel 2.6.19 (#156938).

  21 Sep 2006; Alin Nastac <mrness@gentoo.org>
  +files/ltmodem-2.6-alk-8-kernel-changes.patch,
  -files/ltmodem-2.6-alk-8-module_param.patch,
  ltmodem-8.31_alpha10-r3.ebuild:
  Fix broken compilation when build against a 2.6.18 kernel (#148524).

*ltmodem-8.31_alpha10-r3 (09 Sep 2006)

  09 Sep 2006; Alin Nastac <mrness@gentoo.org> +files/ltmodem_udev,
  -ltmodem-8.31_alpha10-r2.ebuild, +ltmodem-8.31_alpha10-r3.ebuild:
  Correct udev rule by replacing 'KERNEL=' with 'KERNEL==' (#144841).

  19 Apr 2006; Alin Nastac <mrness@gentoo.org>
  +files/ltmodem-2.6-alk-8-module_param.patch,
  ltmodem-8.31_alpha10-r2.ebuild:
  Convert MODULE_PARM to module_param (#130412).

  12 Mar 2006; Alin Nastac <mrness@gentoo.org>
  -ltmodem-8.31_alpha10-r1.ebuild, ltmodem-8.31_alpha10-r2.ebuild:
  Remove old revision. Quote $KV_DIR.

  20 Jan 2006; Alin Nastac <mrness@gentoo.org>
  ltmodem-8.31_alpha10-r2.ebuild:
  Mark as stable on x86 (#118005).

*ltmodem-8.31_alpha10-r2 (14 Jan 2006)

  14 Jan 2006; Alin Nastac <mrness@gentoo.org>
  +ltmodem-8.31_alpha10-r2.ebuild:
  Bump kernel 2.6 driver to alk-8, which fixes compilation issue for 
  kernel 2.6.15 (#118005).

  29 Aug 2005; Alin Nastac <mrness@gentoo.org>