@@ -15,14 +15,14 @@ RMD160 77fcc7ad359f1a80c63b8d3dbdd2a65c7375fb2b files/ltmodem_udev 183
 SHA256 af14018c5c6e9fc6dcb87ef1abf737296354b8fb5cd59d773d723e3d46b9963c files/ltmodem_udev 183
 DIST ltmodem-2.6-alk-8.tar.bz2 436392 RMD160 20a1c41ea5cf836895ae6e2e43acacf45716e0aa SHA1 f150e3065584bf5b2aa913c433dc7efcd0a9dd2e SHA256 262c407471ccaafb7a6b0e7a3df41e37b1d1e6cdf34bd0e1567aac102cf277b6
 DIST ltmodem-8.31a10.tar.gz 580518 RMD160 0dfc43b700a3d806ed0d29e2d3470cc4679a2bb4 SHA1 c93437879f603b9922e882b309f365f3863f746b SHA256 877c10fb668e92d86cdc4eaf0d675047edbfb0654d74b092189a936212f62b10
-EBUILD ltmodem-8.31_alpha10-r3.ebuild 3985 RMD160 310096b1a2b114c09529f70cbda0373a3e487320 SHA1 82bcf34d7f0ba5174f3ff8ebe09d0976c02d5ab9 SHA256 77f2bce4f74869ed5c9c36993f4cf12d82a31d354a45807ebbb531cbc87a47ed
-MD5 cd1f8e005f0fe02a80493face8d6da1a ltmodem-8.31_alpha10-r3.ebuild 3985
-RMD160 310096b1a2b114c09529f70cbda0373a3e487320 ltmodem-8.31_alpha10-r3.ebuild 3985
-SHA256 77f2bce4f74869ed5c9c36993f4cf12d82a31d354a45807ebbb531cbc87a47ed ltmodem-8.31_alpha10-r3.ebuild 3985
-MISC ChangeLog 5012 RMD160 19b21e5443c26549faf8e3eed23fdd93eb08d73a SHA1 e43a6cdab47ea08b7f8335120befc2c3b588698a SHA256 55320d575a78eb578739ec9abb4fa796423eefcdd3ec41d3afb2136e0f038cd5
-MD5 b6222ac8a4b405539398f66ad7c5b338 ChangeLog 5012
-RMD160 19b21e5443c26549faf8e3eed23fdd93eb08d73a ChangeLog 5012
-SHA256 55320d575a78eb578739ec9abb4fa796423eefcdd3ec41d3afb2136e0f038cd5 ChangeLog 5012
+EBUILD ltmodem-8.31_alpha10-r3.ebuild 4044 RMD160 fc01f55610099970bac847db3ac8889069db91db SHA1 c3c5e0200fedaaf9b9004c8f22ad297672158897 SHA256 bc9638fd9e74df3e78a08100d9e8c013d6ffd8823b160d852e5e6a4fda96b31c
+MD5 a6698779115818fce978c7642f17679a ltmodem-8.31_alpha10-r3.ebuild 4044
+RMD160 fc01f55610099970bac847db3ac8889069db91db ltmodem-8.31_alpha10-r3.ebuild 4044
+SHA256 bc9638fd9e74df3e78a08100d9e8c013d6ffd8823b160d852e5e6a4fda96b31c ltmodem-8.31_alpha10-r3.ebuild 4044
+MISC ChangeLog 5117 RMD160 f799447d0163904e6d3abd3b5af5d323de92e563 SHA1 96d77a422dd354d4562ed021986b7878e6f00355 SHA256 5f27c07d91f74180962ba20cc0ffcf52422fbc82275787f0f492d765ced967db
+MD5 b51a5a3730a44a08572fea854daaf340 ChangeLog 5117
+RMD160 f799447d0163904e6d3abd3b5af5d323de92e563 ChangeLog 5117
+SHA256 5f27c07d91f74180962ba20cc0ffcf52422fbc82275787f0f492d765ced967db ChangeLog 5117
 MISC metadata.xml 163 RMD160 df94c60cc0bb7abe5913b464a33966b142b2fe1e SHA1 d8332605fd22c32f15438bbdf24aa622c3d2738a SHA256 1137a0fd866641cf719b0c2e9e77ca9fa4541a42f2cc851fe4659cf2677acca3
 MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
 RMD160 df94c60cc0bb7abe5913b464a33966b142b2fe1e metadata.xml 163
@@ -33,7 +33,7 @@ SHA256 0047612953a721ec98fdafbbdcc15e4ddc34fe0e84085f001430219b0da705a6 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFF8r1jJnxX6mF440QRAmTmAJ4/8cXBR60MhGFD8DxWCbB82hTergCgycus
-AlLrAaQvGmst+aeFr3X7yWI=
-=0LOU
+iD8DBQFGI2OjJnxX6mF440QRAnXwAJ4lPsipChvpD3sI5VXu2DbGSrucfQCgpTrt
+/nD6KSDC3uu78wbRKAkTo9c=
+=PaO3
 -----END PGP SIGNATURE-----
