@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mwave-dev-handler 210 RMD160 9defd57698c80023a0393fa7c106ee33ff9ed20a SHA1 faac34a5597065198c583541bd296a79cbce7988 SHA256 432642343ccd048758a1f33eb27e4523edad399e89ef77de367bd4c90f086eff
 MD5 779ead17ce93702aa87513e41030ba40 files/mwave-dev-handler 210
 RMD160 9defd57698c80023a0393fa7c106ee33ff9ed20a files/mwave-dev-handler 210
@@ -11,14 +14,14 @@ MD5 8ceb387439cc272ebcfbf455eef22ec1 files/mwave.modules 30
 RMD160 545433b24d2e1bec1e4fa9faf3a2cb8e7f482e3f files/mwave.modules 30
 SHA256 875f0c3f2872e5cc74a17c70f2c72a4ecd76122988aa3065bd32810c10dd5437 files/mwave.modules 30
 DIST mwavem-2.0.tar.gz 1443167 RMD160 079cc7f9bcd70daa983f41050cc5817d8af36690 SHA1 a674422e64e306ee4cfeeae9caad0ddcf8898593 SHA256 4b3da6be3ec44caee70ef041f58054ac15ddc12c95455a068ef44edf633329ee
-EBUILD mwavem-2.0.ebuild 1665 RMD160 aba23eb3ef633bb421d5d7c0a40375a7bad72136 SHA1 0cb05941fc8a474aaea4fb497b9fa62fa7a0c927 SHA256 dd0397253746aaaaa68e18d356ace805055d72ca54ff98f17c015a1d2dba1bf8
-MD5 ac31047f79cdfde3718b86b391254369 mwavem-2.0.ebuild 1665
-RMD160 aba23eb3ef633bb421d5d7c0a40375a7bad72136 mwavem-2.0.ebuild 1665
-SHA256 dd0397253746aaaaa68e18d356ace805055d72ca54ff98f17c015a1d2dba1bf8 mwavem-2.0.ebuild 1665
-MISC ChangeLog 2196 RMD160 76b42b3fcdc27212aefa32c918a7f43dae77744f SHA1 93f7fef9aa773f27176f0ffe0da8e0f6d695cb25 SHA256 ed5663b67f2208eb2e3e783d27c5f2551952912838f68cea0c911a5088fa5965
-MD5 4894fcc239eb07564ec5a230f4d96e19 ChangeLog 2196
-RMD160 76b42b3fcdc27212aefa32c918a7f43dae77744f ChangeLog 2196
-SHA256 ed5663b67f2208eb2e3e783d27c5f2551952912838f68cea0c911a5088fa5965 ChangeLog 2196
+EBUILD mwavem-2.0.ebuild 1729 RMD160 c07e09d52888c20d708d8d144ed870c960d73ec2 SHA1 54b5680788e26f8e2d9d2d065c5c46bfba2eaca2 SHA256 3e0d37100b2a94081597196646bce750ec18d071584cc8c27cf278c28855432d
+MD5 8c2514b0ab89ba8fa6c0518b9c810015 mwavem-2.0.ebuild 1729
+RMD160 c07e09d52888c20d708d8d144ed870c960d73ec2 mwavem-2.0.ebuild 1729
+SHA256 3e0d37100b2a94081597196646bce750ec18d071584cc8c27cf278c28855432d mwavem-2.0.ebuild 1729
+MISC ChangeLog 2331 RMD160 4fcc35485c41d5b7150e9bde61fbac264c28dbd9 SHA1 17dad7312a8952289ff3666d6c5536bd1e2505d3 SHA256 ed51b33853a57d07f88671479a01c0cccdeebce186788c7d32b4877961903b73
+MD5 498dbbd70363e2a3022b815aced03bf3 ChangeLog 2331
+RMD160 4fcc35485c41d5b7150e9bde61fbac264c28dbd9 ChangeLog 2331
+SHA256 ed51b33853a57d07f88671479a01c0cccdeebce186788c7d32b4877961903b73 ChangeLog 2331
 MISC metadata.xml 379 RMD160 acdd9e1a66b82334cb74240ed63c953b4881f485 SHA1 aa2e1f18acb90bdfa620c18b63f098fee0fb37ba SHA256 774817fb98b23045f380db2647d7d88b258b23dc098e1257e5831b262a75beb4
 MD5 62bd2d669ff76fcf6145dd0f91deafa9 metadata.xml 379
 RMD160 acdd9e1a66b82334cb74240ed63c953b4881f485 metadata.xml 379
@@ -26,3 +29,10 @@ SHA256 774817fb98b23045f380db2647d7d88b258b23dc098e1257e5831b262a75beb4 metadata
 MD5 9785f59f2bd16e93cdea7655bb402907 files/digest-mwavem-2.0 235
 RMD160 4b9fc9c79f389cc4cbe58a06dc191b63be88cda6 files/digest-mwavem-2.0 235
 SHA256 efa35fc7dc5fba5bece26af604a1c04feab3d74296f1b966a340509014cf21c7 files/digest-mwavem-2.0 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGI2QDJnxX6mF440QRAtL6AJ9hJ1UqBDJD5Ldk2t8yQ5OL2ANO0QCgvfly
+C4t/tfwa2Xz+D8EGQucKSKA=
+=4DAe
+-----END PGP SIGNATURE-----
