@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/ltmodem
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ltmodem/ChangeLog,v 1.32 2007/03/10 14:14:48 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ltmodem/ChangeLog,v 1.33 2007/04/16 11:52:50 mrness Exp $
+
+  16 Apr 2007; Alin Năstac <mrness@gentoo.org>
+  ltmodem-8.31_alpha10-r3.ebuild:
+  Use update-modules.
 
   10 Mar 2007; Alin Năstac <mrness@gentoo.org>
   ltmodem-8.31_alpha10-r3.ebuild:
